# Haskell-Index-Core-Library

./: .gitignore  .travis.yml  LICENSE  imonad.cabal  index-core.cabal
Control/: IMonad.hs
Control/Category/: Index.hs
Control/IMonad/: Core.hs  Do.hs  Restrict.hs  Trans.hs
Data/: Index.hs
