Name: index-core
Version: 1.0.0
Cabal-Version: >=1.14.0
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2012 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Stability: Experimental
Bug-Reports: mailto:Gabriel439@gmail.com
Synopsis: Indexed Types
Description:
  This library implements indexed types in the style of Conor McBride,
  described in the functional pearl \"Kleisli arrows of outrageous fortune\",
  following his presentation closely.
  .
  This library implements a more general indexed monad where the final index
  might not be known, while still providing type-safe guarantees.
Category: Control, Indexed
Tested-With: GHC ==7.4.1
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Index-Core-Library

Library
    Build-Depends: base >= 4 && < 5
    Exposed-Modules:
        Control.IMonad.Core,
        Control.IMonad.Restrict,
        Control.IMonad.Do,
        Control.IMonad.Trans,
        Data.Index
    GHC-Options: -O
    Default-Language: Haskell2010
